--- a/package.json
+++ b/package.json
@@ -4,20 +4,30 @@
   "description": "Coding test task",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --forceExit",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "author": "heaks",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.7"
   },
   "devDependencies": {
+    "jest": "^25.3.0",
+    "jest-tobetype": "^1.2.3",
     "nodemon": "^2.0.3"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
